--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,21 @@
 <html ng-app="Journal">
 	
 <head>
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Trade+Winds"/>
-	<link rel='stylesheet' href='fullCalendar/fullcalendar.css'/>
+	<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Rock+Salt' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css"/>
+	<link rel="stylesheet" href="css/bootstrap-responsive.css"/>
+	<link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
 	<link rel="stylesheet" href="css/freelancer.css"/>
 	<link rel="stylesheet" href="css/styles.css"/>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+	<link rel='stylesheet' href='fullCalendar/fullcalendar.css'/>
+	<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.css"/>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/textAngular.css"/>
-	<!-- <link rel="stylesheet" href="css/typica-login.css"/>
-	<link rel="stylesheet" href="css/bootstrap-responsive.css"/>
-	<link rel="stylesheet" href="css/bootstrap-responsive.min.css"/> -->
+	<link rel="stylesheet" href="css/typica-login.css"/>
 	<link rel="stylesheet" href="//rawgithub.com/mgcrea/angular-motion/master/dist/angular-motion.min.css">
 	
-	<script src='../fullCalendar/lib/jquery.min.js'></script>
 	<script src='../fullCalendar/lib/moment.min.js'></script>
 	<script src='fullCalendar/fullcalendar.js'></script>
 
@@ -31,28 +31,67 @@
 
 <div ng-view> </div>
 
+<!-- TEST LOGIN PAGE -->
 <!-- 
-	<div>
-		<textarea class="ckeditor" name="editor1" cols="80" rows="12" ng-model="journalPost" type="text" class="newPostBox"></textarea>	
-		<script>
-            CKEDITOR.replace( 'editor1' );
-        </script>
-		
- 	</div> -->
 
-<!-- <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.js"></script>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="index.html"><img src="logo.png" alt="Typica - Bootstrap Awesome Template!"></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+        <div id="login-wraper">
+            <form class="form login-form">
+                <legend>Sign in to <span class="blue">The Best Journal in the Universe!</span></legend>
+            
+                <div class="row">
+			<div class="col-sm-6 text-right"><strong>Email:</strong></div>
+			<div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
+		</div>
+		<div class="row">
+			<div class="col-sm-6 text-right"><strong>Password:</strong></div>
+			<div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
+		</div>
+		<div class="row text-center">
+		<br>
+			<button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
+		
+            
+            </form>
+        </div>
+
+    </div>
+
+    <footer class="white navbar-fixed-bottom" style="color: black">
+      Don't have an account yet? <button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
+		</div>
+    </footer> -->
+
+
+
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/backstretch.min.js"></script>
+<script src="js/typica-login.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular-sanitize.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular-rangy.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.min.js"></script>
-<!-- <script src="js/backstretch.min.js"></script>
-<script src="js/jquery.js"></script> 
-<script src="js/typica-login.js"></script>   -->
 <script src="js/app.js"></script> 
 <script src="js/services/historyService.js"></script> 
 <script src="js/services/authService.js"></script> 
@@ -64,7 +103,7 @@
 <script src="js/controllers/profileController.js"></script> 
 <script src="js/controllers/mainController.js"></script> 
 <script src="js/controllers/journalController.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+ 
 
 
 </body>
