--- a/public/index.html
+++ b/public/index.html
@@ -31,50 +31,6 @@
 
 <div ng-view> </div>
 
-<!-- TEST LOGIN PAGE -->
-<!-- 
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="index.html"><img src="logo.png" alt="Typica - Bootstrap Awesome Template!"></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-        <div id="login-wraper">
-            <form class="form login-form">
-                <legend>Sign in to <span class="blue">The Best Journal in the Universe!</span></legend>
-            
-                <div class="row">
-			<div class="col-sm-6 text-right"><strong>Email:</strong></div>
-			<div class="col-sm-6 text-left"><input type="text" ng-model="email" /></div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6 text-right"><strong>Password:</strong></div>
-			<div class="col-sm-6 text-left"><input type="password" ng-model="password" /></div>
-		</div>
-		<div class="row text-center">
-		<br>
-			<button class="btn btn-primary btn-xs" ng-click="clickToLogin(email, password)"> <i class="fa fa-user"></i>  Login </button>
-		
-            
-            </form>
-        </div>
-
-    </div>
-
-    <footer class="white navbar-fixed-bottom" style="color: black">
-      Don't have an account yet? <button class="btn btn-primary btn-xs" ng-click="clickToRegister(email, password)"> Register </button>
-		</div>
-    </footer> -->
 
 
 
@@ -93,11 +49,13 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.min.js"></script>
 <script src="js/app.js"></script> 
+<script src="js/services/registerService.js"></script> 
 <script src="js/services/historyService.js"></script> 
 <script src="js/services/authService.js"></script> 
 <script src="js/services/mainService.js"></script> 
 <script src="js/services/profileService.js"></script> 
 <script src="js/services/journalService.js"></script> 
+<script src="js/controllers/registerController.js"></script> 
 <script src="js/controllers/authController.js"></script>
 <script src="js/controllers/historyController.js"></script> 
 <script src="js/controllers/profileController.js"></script> 
