--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css"/>
 	<link rel="stylesheet" href="css/bootstrap-responsive.css"/>
 	<link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
+	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="stylesheet" href="css/freelancer.css"/>
 	<link rel="stylesheet" href="css/styles.css"/>
 	<link rel='stylesheet' href='fullCalendar/fullcalendar.css'/>
@@ -16,7 +17,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/textAngular.css"/>
 	<link rel="stylesheet" href="css/typica-login.css"/>
-	<link rel="stylesheet" href="//rawgithub.com/mgcrea/angular-motion/master/dist/angular-motion.min.css">
+	<!-- <link rel="stylesheet" href="//rawgithub.com/mgcrea/angular-motion/master/dist/angular-motion.min.css"> -->
 	
 	<script src='../fullCalendar/lib/moment.min.js'></script>
 	<script src='fullCalendar/fullcalendar.js'></script>
@@ -38,6 +39,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+<script src="js/animations.js"></script> 
 <script src="js/bootstrap.js"></script>
 <script src="js/backstretch.min.js"></script>
 <script src="js/typica-login.js"></script> 
