--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 	<script src='fullCalendar/fullcalendar.js'></script>
 
 </head>
-   <title>The Journal</title>
+   <title>Mean Stack Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
