--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/textAngular.css"/>
 	<link rel="stylesheet" href="css/typica-login.css"/>
-	<!-- <link rel="stylesheet" href="//rawgithub.com/mgcrea/angular-motion/master/dist/angular-motion.min.css"> -->
 	
 	<script src='../fullCalendar/lib/moment.min.js'></script>
 	<script src='fullCalendar/fullcalendar.js'></script>
@@ -32,12 +31,10 @@
 
 <div ng-view> </div>
 
-
-
-
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.1.0-X.5/angular-google-maps.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
 <script src="js/animations.js"></script> 
 <script src="js/bootstrap.js"></script>
@@ -64,9 +61,5 @@
 <script src="js/controllers/mainController.js"></script> 
 <script src="js/controllers/journalController.js"></script>
  
-
-
 </body>
-
-
 </html>
