--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html ng-app="Journal">
 	
 <head>
+	<link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico'/>
 	<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Rock+Salt' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Trade+Winds' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css"/>
@@ -31,22 +32,26 @@
 
 <div ng-view> </div>
 
+						<!-- Angular Scripts -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.1.0-X.5/angular-google-maps.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
-<script src="js/animations.js"></script> 
-<script src="js/bootstrap.js"></script>
-<script src="js/backstretch.min.js"></script>
-<script src="js/typica-login.js"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular-sanitize.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular.min.js"></script> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.3.7/dist/textAngular-rangy.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-animate.min.js"></script>
+						<!-- jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+<script src="js/animations.js"></script> 
+<script src="js/bootstrap.js"></script>
+<script src="js/backstretch.min.js"></script>
+<script src="js/typica-login.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.js"></script>
+						<!-- Mean Stack App -->
 <script src="js/app.js"></script> 
 <script src="js/services/registerService.js"></script> 
 <script src="js/services/historyService.js"></script> 
