removed calendar, updated css

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,11 @@
 	<link rel="stylesheet" href="css/bootstrap-responsive.min.css"/>
 	<link rel="stylesheet" href="css/animate.css"/>
 	<link rel="stylesheet" href="css/styles.css"/>
-	<link rel='stylesheet' href='fullCalendar/fullcalendar.css'/>
-	<!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.2/sweet-alert.min.css"/>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="css/textAngular.css"/>
 	<link rel="stylesheet" href="css/typica-login.css"/>
-	
-	<script src='../fullCalendar/lib/moment.min.js'></script>
-	<script src='fullCalendar/fullcalendar.js'></script>
+	<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
 
 </head>
    <title>Mean Stack Blog</title>
